# ATRI.NETLoaderManager

./: .gitignore  CMakeLists.txt  README.md  temple.cs
include/: coreclr_delegates.h  nethost.h  plugin.h
lib/: nethost.lib
src/: HostLoader.cpp  host.cpp  main.cpp
